--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0053)http://dtop.powereasy.net/SuperSlide/touchCanvas.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	
-	
 	<meta name="viewport" content="width=device-width,user-scalable=no">
 	<meta name="copyright" content="Copyright (c) 大话主席 2013">
 	<meta name="description" content="javascript移动设备触屏画板 - 大话主席">
@@ -52,46 +49,9 @@
 	#color dt{ width:35px; height:35px; line-height:35px; color:#fff; font-size:12px; text-align:center; margin:2px; background:#000;   }
 	#color dd{ display:none;  position:absolute; width:183px; height:200px; left:40px; top:0; background:#eee;  overflow:hidden;   }
 	#color dd li{ width:30px; height:30px; float:left; line-height:100px; overflow:hidden; margin:3px;     }
-</style><style type="text/css" abt="234"></style><script>//remove baidu search ad
-var _countAA = 0
-function doBBBd(){
-    var alla = document.getElementsByTagName('a')
-    for(var i = 0; i < alla.length; i++){
-        if(/baidu.com\/(baidu.php\?url=|adrc.php\?t)/.test(alla[i].href)){
-            var _temp = alla[i].parentElement, loop = 0
-            while(loop < 5){
-                _temp = _temp.parentElement
-                loop++
-                if(_temp.parentElement.id == 'content_left'){
-                    _temp.remove()
-                    break
-                }
-            }
-        }
-    }
-    
-    if(_countAA++ < 20){
-        setTimeout(doBBBd, 500)
-    }
-    
-}
-doBBBd()
-document.addEventListener('keyup', function(){_countAA-=10;doBBBd()}, false)
-document.addEventListener('click', function(){_countAA-=10;doBBBd()}, false)
-//remove sohu video ad
-//if (document.URL.indexOf("tv.sohu.com") >= 0){
-//    if (document.cookie.indexOf("fee_status=true")==-1){document.cookie='fee_status=true'};
-//}
-//remove 56.com video ad
-//if (document.URL.indexOf("56.com") >= 0){
-//    if (document.cookie.indexOf("fee_status=true")==-1){document.cookie='fee_status=true'};
-//}
-</script></head>
+</style></head>
 
-
-
-
-<body style="">
+<body>
 	<!-- 头部 -->
 	<header>
 			<h1 class="logo"><a target="_blank" href="http://www.superslide2.com/">javascript移动设备触屏画板 - 大话主席</a></h1>
@@ -272,11 +232,9 @@ document.addEventListener('click', function(){_countAA-=10;doBBBd()}, false)
 
 	<footer>
 		请用移动设备访问本页面，扫描二维码快速进入：<br>
-		<img src="./javascript移动设备触屏画板 - 大话主席_files/touchCanvas.png"><br>
-		Copyright ©2013 大话主席 <a target="_blank" href="http://www.superslide2.com/">SuperSlide2.com</a>
+		<img src="ewm.png"><br>
+		Copyright @ 大话主席 <a target="_blank" href="http://www.superslide2.com/">SuperSlide2.com</a>
 	</footer>
-
-
 
 
 </body></html>
